# iaq_zmod4xxx

./: README_TB_AUTH.txt  docker-compose.yml
common/sensor/: app_temp.c  app_temp.h  app_tvoc.c  app_tvoc.h  common.h  i2c_sensors.h  sesub.c  sesub.h
common/wifi/: app_wifi.c
components/hs300x/: CMakeLists.txt  LICENSE  hs300x.c  hs300x.h
components/led_strip/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
components/led_strip/examples/led_strip_rmt_ws2812/main/: led_strip_rmt_ws2812_main.c
components/led_strip/include/: led_strip.h  led_strip_rmt.h  led_strip_spi.h  led_strip_types.h
components/led_strip/src/: led_strip_api.c  led_strip_rmt_encoder.c  led_strip_spi_dev.c
components/zmod4xxx/: CMakeLists.txt  component.mk
components/zmod4xxx/HAL/: zmod4xxx_hal.h
components/zmod4xxx/lib/esp32s3/: zmod4xxx_cleaning.h
components/zmod4xxx/src/: zmod4xxx.c
esp32s3_mqtt_ex/: CMakeLists.txt  platformio.ini  sdkconfig.esp32-s3-devkitc-1.old
esp32s3_mqtt_ex/components/zmod4xxx/: component.mk
esp32s3_mqtt_ex/components/zmod4xxx/HAL/: zmod4xxx_hal.c
esp32s3_mqtt_ex/components/zmod4xxx/include/: zmod4xxx_types.h
esp32s3_mqtt_ex/components/zmod4xxx/lib/esp32s3/xtensa-esp32s3-elf-gcc/: iaq_2nd_gen.h  zmod4xxx_cleaning.h
esp32s3_mqtt_ex/server/: server_key.pem
esp32s3_mqtt_ex/src/: CMakeLists.txt  Kconfig.projbuild  main.c  sesub.c
esp32s3_wo_pm/: CMakeLists.txt  platformio.ini  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32-s3-devkitc-1.old
esp32s3_wo_pm/certs/: cert.pem  key.pem  server.pem
esp32s3_wo_pm/components/zmod4xxx/: CMakeLists.txt  component.mk
esp32s3_wo_pm/src/: CMakeLists.txt  Kconfig.projbuild  common.h  main.c  sesub.c  sesub.h  uisub.c  uisub.h
